Bug 1927458 - Skip past any default-ignorable codepoints when evaluating the context of a segment break. r=layout-reviewers,emilio

Differential Revision: https://phabricator.services.mozilla.com/D227191